--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ install:
 script:
   - python3 manage.py test
 
-# deploy:
-#   - provider: elasticbeanstalk
-#     access_key_id: $ACCESSKEYID
-#     secret_access_key: $SECRETACCESSKEY
-#     region: 
-#     app: 
-#     env: 
-#     bucket_name: 
-#     on:
-#       all_branches: true
+deploy:
+  - provider: elasticbeanstalk
+    access_key_id: $ACCESSKEYID
+    secret_access_key: $SECRETACCESSKEY
+    region: 'us-east-1'
+    app: 'NYC-Accessible-Streets'
+    env: 'NYCAccessibleStreets-env'
+    bucket_name: 'elasticbeanstalk-us-east-1-978364673633'
+    on:
+      all_branches: true
