--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -4,3 +4,5 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: "NYCAccessibleStreet.settings"
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
