--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ script:
 after_script:
   - python -m coveralls
 
-#deploy:
-#  - provider: elasticbeanstalk
-#    access_key_id: $ACCESSKEYID
-#    secret_access_key: $SECRETACCESSKEY
-#    region: 'us-east-1'
-#    app: 'NYC-Accessible-Streets'
-#    env: 'NYCAccessibleStreets-env'
-#    bucket_name: 'elasticbeanstalk-us-east-1-978364673633'
-#    on:
-#      branch: develop
+deploy:
+ - provider: elasticbeanstalk
+   access_key_id: $ACCESSKEYID
+   secret_access_key: $SECRETACCESSKEY
+   region: 'us-east-1'
+   app: 'NYC-Accessible-Streets'
+   env: 'NYCAccessibleStreets-env'
+   bucket_name: 'elasticbeanstalk-us-east-1-978364673633'
+   on:
+     branch: develop
