Sprint7 nyc accessible branch PR (#68)
* issue44-Ames-signupLoginAddition (#62)

* extra signup option plus connection to DB

* fixed redirects and added signup/login error msgs

* link from login to signup

* removed old files

* black

* Issue13 sarthak accessible infra pins (#66)

* 1. Added accessible infra markers on map
2. Added popup on pins

* Reformatted the code

* Issue39 claudia styling login signup (#67)

* add image

* add label

* add styles for log in sign up

* added divs and stylesheet

* added divs and stylesheet

* add crispy form

* adjust sign up margin

* reformat using black

* uncommented deploy

* Issue52 simone signup login unittests (#65)

* URL unit tests

* started unit tests

* added user tests

* fixed flake8 violation

* updated travis.yml file to run tests on all apps

Co-authored-by: Sarthak Gagdani <sg6367@nyu.edu>

Co-authored-by: Ames Bartels <105522725+ab9649@users.noreply.github.com>
Co-authored-by: Claudia <31222117+claudiaashao@users.noreply.github.com>
Co-authored-by: Simone B <76664640+SNefertitiB@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,18 @@ install:
 script:
   - python -m black . --check
   - flake8 .
-  - coverage run --source=NYCAccessibleStreet,landing_map manage.py test
+  - coverage run manage.py test
 
 after_script:
   - python -m coveralls
 
-#deploy:
-#  - provider: elasticbeanstalk
-#    access_key_id: $ACCESSKEYID
-#    secret_access_key: $SECRETACCESSKEY
-#    region: 'us-east-1'
-#    app: 'NYC-Accessible-Streets'
-#    env: 'NYCAccessibleStreets-env'
-#    bucket_name: 'elasticbeanstalk-us-east-1-978364673633'
-#    on:
-#      branch: develop
+deploy:
+ - provider: elasticbeanstalk
+   access_key_id: $ACCESSKEYID
+   secret_access_key: $SECRETACCESSKEY
+   region: 'us-east-1'
+   app: 'NYC-Accessible-Streets'
+   env: 'NYCAccessibleStreets-env'
+   bucket_name: 'elasticbeanstalk-us-east-1-978364673633'
+   on:
+     branch: develop
