--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 script:
   - python -m black . --check
   - flake8 .
-  - coverage run manage.py test
+  - coverage run manage.py test --no-input
 
 after_script:
   - python -m coveralls
